--- a/chi2012.tex
+++ b/chi2012.tex
@@ -440,6 +440,7 @@ We recruited participants through adverts posted near the University campus and 
 
 %% TODO look further into types of data analysis....
 
+\newpage
 \section{Results}
 
 We received 26 responses to our call for participants, from which we selected the first 20 (ten of which were female). Seven were non-students, comprised of university staff and alumni; the remainder were students, 8 studying computer science, and 5 studying other subjects.  Due to the large population of international students and staff at the University, we ended up getting a large number of non-native English speakers.  However, since all students and staff had passed requisite proficiency tests, we did not think this would substantially impact results.  On average, each study took 40 minutes to complete.  The information in Table \ref{tbl:data} summarises the captured metrics for each participant.
