--- a/chi2012.tex
+++ b/chi2012.tex
@@ -392,7 +392,7 @@ We first describe our methodology, starting with the three hypotheses we set out
 \end{description}
 
 \subsubsection{Study and task design}
-To test these hypotheses, we designed a within-subjects (repeated measures) lab-based A-B study in which participants were asked to perform predefined subjective-choice tasks in two separate timed trials, once with the DP interface (condition A) and once with a baseline interface (condition B).  Each task was paired with one of two datasets, depending on condition, which were fully counterbalanced in a Latin square design to eliminate potential ordering, task, and dataset biases.\looseness=-1
+To test these hypotheses, we designed a within-subjects (repeated measures) lab-based A-B study in which participants were asked to perform predefined subjective-choice tasks in two separate timed trials, once with the DP interface (condition A) and once with a baseline interface (condition B).  Each task was paired with one of two datasets, depending on condition, which were counterbalanced in a full-factorial design to eliminate potential ordering, task, and dataset biases.\looseness=-1
 
 The participants were seated at a standard Macintosh desktop equipped with a 22-inch monitor with a standard keyboard and mouse. Each participant was given a maximum of 10 minutes to each of two tasks, but were told that if they finished earlier they could tell us and move on to the next condition.  Prior to A conditions, participants were trained on how to use DP using a five-minute instructional video.
 
@@ -483,10 +483,10 @@ The following four sections describe the metrics we used to measure task perform
 %We used three metrics to measure task performance: time to completion; the number of factors used in the choice; and the number of candidates evaluated.
 
 \subsubsection{Efficiency: Time taken}
-Participants spent an average of 8.9 minutes performing the tasks. Condition A (DP) took slightly less time ($M=8.7$min, $SD=1.79$) per trial than condition B ($M=9.0$min; $SD=1.44$).  An ANOVA test of time taken by interface condition blocking by participant did not find interface use a significant predictor of task completion time.  Although across trials, the restaurant selection task took on average slightly less time ($M=8.8$min,$SD=1.58$) than the university trials ($M=8.9$min,$SD=1.66$), the aforementioned ANOVA test found task type to not be a significant predictor.
+Participants spent an average of 8.9 minutes performing the tasks. Condition A (DP) took slightly less time ($M=8.7$min, $SD=1.79$) per trial than condition B ($M=9.0$min; $SD=1.44$); however, a 2-way repeated measures ANOVA test of time taken by interface condition, blocked by participant ID, revealed that interface condition did not have a significant effect on task completion time.  This analysis also showed no significant effect of participant ID on task completion.  Comparing tasks, the restaurant selection task took on average slightly less time ($M=8.8$min,$SD=1.58$) than the university trials ($M=8.9$min,$SD=1.66$), but this difference was not significant. 
 
 \subsubsection{Thoroughness: Factors weighed in final choice}
-The second metric was the number of factors the participant considered in making their final choice. To determine this, we asked participants to explain precisely why they made their choice, and matched their justifications to properties in the data.  This analysis revealed the interface used made a significant impact on the number of factors weighed ($F(1,19)=3.95; p<0.10$); participants in the DP condition listed an average of 5.5 choices in their decision ($SD=1.7$) versus 4 ($SD=1.73$) in the standard condition.
+The second metric was the number of factors the participant considered in making their final choice. To determine this, we asked participants to explain why they made their choice(s), and recorded the number of distinct data dimensions mentioned.  An ANOVA revealed a significant effect of interface on the number of such factors mentioned; post-hoc analysis using Tukey-Schiffe adjustments indicated that participants in the DP condition mentioned significantly more dimensions in their final decisions ($M=5.5; SD=1.7$) than those in the control condition ($M=4; SD=1.73$), $F(1,19)=3.95; p<0.10$. A strong significant effect was also observed between participant ID and number of dimensions mentioned, meaning people differed significantly on the number of reasons they gave ($F(19,19)=4.53 p < 0.001$).
 
 \subsubsection{Diversity: Data sources consulted}
 The third metric we used to gauge how well the participant performed their tasks is the number of different data sources the participant consulted during the trial. In this metric, participants used an average of 88\% of data sources provided in the DP case, compared to 80\% in the standard interface, although an ANOVA test blocking on participant demonstrated that interface choice only approached significance in predicting the number of sources consulted ($F(1,19)=0.04$ $p\approx0.10$).
